# autoxla

./: README.md  __init__.py  pyproject.toml  utils.py
autoxla/: __init__.py  requirements.txt  utils.py
autoxla/kernels/attention/: __init__.py  impl_utils.py
autoxla/kernels/attention/flash_attention/: __init__.py  fa_xla.py
autoxla/kernels/attention/splash_attention/: __init__.py  sa_kernel.py  sa_xla.py
autoxla/kernels/quantization/: __init__.py  quantized_matmul.py  tuned_block_sizes.py  util.py
autoxla/models/: __init__.py  auto_model.py
autoxla/optim/: came.py  lion.py  optim_wrapper.py  sm3.py  utils.py
autoxla/quantization/: __init__.py  language_model_quantizer.py
kernels/attention/: __init__.py  impl_utils.py
kernels/attention/splash_attention/: sa_xla.py
kernels/attention/splash_attention/models/: __init__.py  gemma2.py  llama.py  ministral3.py  qwen3.py
kernels/quantization/: __init__.py  quantized_matmul.py  tuned_block_sizes.py
models/: __init__.py  auto_model.py  segmentation.py
quantization/: __init__.py  language_model_quantizer.py
