[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoXLA"
version = "0.0.1.1"
description = "Automatically optimize and prepare language models for TPU distributed training."
authors = [{name = "Sebastian Gabarain"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "transformers",
    "zstandard",
    "jsonlines",
    "peft",
    "wandb",
    "bitsandbytes",
    "accelerate",
    "datasets",
    "sentencepiece",
    "langchain",
    "torch~=2.8.0",
    "torch_xla[tpu]~=2.8.0",
    "torch_xla[pallas]",
    "tensorflow-cpu",
]

# The repository uses a flat-root layout: the repo root itself is the top-level
# `AutoXLA` package (root __init__.py + utils.py), with subpackages under
# kernels/, models/, optim/, quantization/. Map the import name to the repo
# root and list every subpackage explicitly so that installing from source
# (`pip install .`, `pip install -e .`, or `pip install git+<url>`) produces an
# importable `AutoXLA` package. Automatic discovery cannot handle this layout:
# `find_packages` skips the root package and cannot descend into kernels/.
[tool.setuptools]
packages = [
    "AutoXLA",
    "AutoXLA.kernels",
    "AutoXLA.kernels.attention",
    "AutoXLA.kernels.attention.flash_attention",
    "AutoXLA.kernels.attention.splash_attention",
    "AutoXLA.kernels.attention.splash_attention.models",
    "AutoXLA.kernels.quantization",
    "AutoXLA.models",
    "AutoXLA.optim",
    "AutoXLA.quantization",
]

[tool.setuptools.package-dir]
"AutoXLA" = "."
